--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "jest-another-rpg",
+  "name": "rpg",
   "version": "1.0.0",
-  "description": "week10",
-  "main": "index.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/michaelmikelic/jest-another-RPG.git"
-  },
-  "author": "Michael Mikelic",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/michaelmikelic/jest-another-RPG/issues"
-  },
-  "homepage": "https://github.com/michaelmikelic/jest-another-RPG#readme",
-  "devDependencies": {
-    "jest": "^28.0.3"
+  "dependencies": {
+    "inquirer": "^7.0.3",
+    "jest": "^24.9.0"
   }
 }
